2003-09-22  Jeffrey Stedfast  <fejj@ximian.com>

	* filter-int.c (get_widget): Listen to the "value-changed" signal
	rather than the "changed" signal. Fixes bug #48166.

2003-09-16  Jeremy Katz  <katzj@redhat.com>

	* rule-context.c (rule_context_add_part_set): type should be a GType.
	(rule_context_add_rule_set): Likewise.
	* rule-context.h: Update prototypes.  Use GType instead of int for
	type in _part_set_map and _rule_set_map.
	
2003-09-15  Not Zed  <NotZed@Ximian.com>

	** See Natzilla task #47524

	* filter-rule.h (FilterRule): add a system bit, for rules that
	shouldn't be edited/saved.

	* rule-context.c (load): check for ruleset maps in the system
	file, and if they exist, load in as system rules.
	(save): ignore system rules if they exist.

	* searchtypes.xml: Added a search-specific types folder.  Also
	contains system searches that cannot be deleted.

2003-08-18  Ettore Perazzoli  <ettore@ximian.com>

	* vfolder-rule.c (source_add): As a temporary measure, don't call
	evolution_shell_client_user_select_folder() since this is not done
	by the shell anymore.

	* filter-folder.c (get_widget): Return NULL for now, since we
	can't get the folder selector button from the shell anymore.

2003-08-05  Not Zed  <NotZed@Ximian.com>

	** See bug #42636.
	
	* vfoldertypes.xml: Fix some of the subject rules, they were
	missing matching ')'s.

2003-08-01  Not Zed  <NotZed@Ximian.com>

	** See bug #47208.

	* filter-code.c (build_code): wrap the expression in a match-all
	so boolean expressions work properly for folder searches.

2003-07-23  Dan Winship  <danw@ximian.com>

	* Makefile.am: Use EVO_MARSHAL_RULE

2003-06-13  Larry Ewing  <lewing@ximian.com>

	* filter-source.c (filter_source_finalize): free current_url.

2003-06-11  Mike Kestner  <mkestner@ximian.com>

	* rule-context.c (load): stat the user file before parsing.

2003-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes some leaks from bug #43883.
